@@ -14,6 +14,8 @@ git-annex (6.20161119) UNRELEASED; urgency=medium
   * fromkey: Accept multiple pairs of files and keys.
     Thanks, Daniel Brooks.
   * rekey: Added --batch mode.
+  * add: Stage modified non-large files when running in indirect mode. 
+    (This was already done in v6 mode and direct mode.)
 
  -- Joey Hess <id@joeyh.name>  Mon, 21 Nov 2016 11:27:50 -0400
 
